Fix sizes and paddings on mobile

--- a/src/scss/components/_services.scss
+++ b/src/scss/components/_services.scss
@@ -39,9 +39,12 @@
   &-title {
     @include heading-3;
     margin: 0 0 3.2rem;
+    font-size: 2.8rem;
+    line-height: 3.2rem;
 
     // Desktop
     @include breakpoint(md) {
+      @include heading-3;
       margin: 0 0 4.8rem;
     }
   }
@@ -56,10 +59,6 @@
     display: flex;
     justify-content: center;
     flex-flow: column wrap;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
 
     @include breakpoint(md) {
       flex-direction: row;
@@ -77,6 +76,10 @@
     padding: 1.6rem;
     margin-bottom: 1.2rem;
     box-sizing: content-box;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
 
     @include breakpoint(md) {
       flex-direction: column;
@@ -136,6 +139,7 @@
       margin-right: 1.2rem;
       height: 3.6rem;
       width: 3.6rem;
+      min-width: 3.6rem;
 
       // Desktop
       @include breakpoint(md) {
@@ -154,10 +158,13 @@
       @include heading-5;
 
       color: var(--white);
-      margin: 0;
+      margin: 0 1.5rem 0 0;
+      font-size: 1.8rem;
+      line-height: 2.4rem;
 
       // Desktop
       @include breakpoint(md) {
+        @include heading-5;
         margin: 0 0 4.7rem;
       }
     }
@@ -173,6 +180,7 @@
 
       img {
         width: 3.8rem;
+        min-width: 3.8rem;
 
         // Desktop
         @include breakpoint(md) {
